Fix overflow issues w/ metadata server URL placeholders

--- a/static/style.css
+++ b/static/style.css
@@ -708,6 +708,7 @@ label.required::after {
     border-radius: var(--bs-border-radius);
     opacity: 1;
     box-decoration-break: clone;
+    overflow-wrap: break-word;
     transition: opacity 0.5s ease
 }
 
